# secompp-rust

./: .gitignore  Cargo.toml  README.md
comparisons/: Cargo.toml
comparisons/src/: main.py  main.rs
docs/: index.html  main.css
examples/1-2_print_avancado/: Cargo.toml
examples/1_hello_world/src/: main.rs
examples/2_literais_operadores/: Cargo.toml
examples/2_literais_operadores/src/: main.rs
examples/3_tuplas_arrays/: Cargo.toml
examples/3_tuplas_arrays/src/: main.rs
examples/4_custom_types/src/: main.rs
examples/5_variaveis_constantes/: Cargo.toml
examples/5_variaveis_constantes/src/: main.rs
examples/6_2_conv_avancada/: Cargo.toml
examples/6_2_conv_avancada/src/: main.rs
examples/6_op_tipos/: Cargo.toml
examples/6_op_tipos/src/: main.rs
examples/7_expressoes/: Cargo.toml
examples/8_control_flow/src/: main.rs
examples/src/: _01_variables_and_constants.rs  _02_data_types.rs  _03_functions.rs  _04_composed_types.rs  _05_structs_enums.rs  _06_flow_control.rs  _07_scopes.rs  _08_pattern.rs  _09_slices.rs  _10_borrowing.rs  _11_lifetimes.rs  _12_error_handling.py  _12_error_handling.rs  main.rs
exemplos/: ez_crash.c
exercicios/questionario/: Cargo.toml
exercicios/questionario_certo/: Cargo.toml
projeto/: .env  Cargo.toml  README.md  Rocket.toml  data.db
projeto/migrations/2022-10-19-055839_albums/: up.sql
projeto/migrations/2022-10-19-092136_albums/: down.sql  up.sql
projeto/src/: lib.rs  main.rs  model.rs  models.rs  schema.rs
projetos/cli/: Cargo.toml
projetos/daemon/: Cargo.toml  client.py
projetos/furry/: Cargo.toml
(+27 files in other folders)
