[package]
name = "music_api"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Serezane <daniel.serezane@unesp.br>"]

[dependencies]
diesel = "2.0.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool"] # mágico, não precisa importar o sqlite3!

[default.databases]
sqlite_logs = { url = "data.db" }
